--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
 
                         <div class="form-group m-t-30">
                             <div class="col-sm-7">
-                                <a href="#"><i class="fa fa-lock m-r-5"></i> Forgot your password?</a>
+                                <a href="forgot_password.html"><i class="fa fa-lock m-r-5"></i> Forgot your password?</a>
                             </div>
                             <div class="col-sm-5 text-right">
                                 <a href="register.html">Create an account</a>
