--- a/login.html
+++ b/login.html
@@ -31,17 +31,17 @@
                     <div class="logo text-center m-b-20"> 
                         <a href="#"><img src="assets/images/synrgise-logo-white.png"></a>
                     </div> 
-                    <form class="form-horizontal m-t-20" action="index.html">
+                    <form class="form-horizontal m-t-20" action="login.php" method="POST">
                         
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <input class="form-control input-lg" type="text" required="" placeholder="Username">
+                                <input class="form-control input-lg" type="text" name="username" required="" placeholder="Username">
                             </div>
                         </div>
 
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <input class="form-control input-lg" type="password" required="" placeholder="Password">
+                                <input class="form-control input-lg" type="password" name="password" required="" placeholder="Password">
                             </div>
                         </div>
 
