implemented remember me using cookies

--- a/register.html
+++ b/register.html
@@ -55,7 +55,7 @@
 
                     <div class="form-group m-t-30 m-b-0">
                         <div class="col-sm-12 text-center">
-                            <a href="login.html"><i class="fa fa-sign-in m-r-5"></i>Already have an account? Log in</a>
+                            <a href="login_page.php"><i class="fa fa-sign-in m-r-5"></i>Already have an account? Log in</a>
                         </div>
                     </div>
                 </form>
