--- a/index.html
+++ b/index.html
@@ -443,20 +443,21 @@
                                         <h4 class="panel-title"><i class="fa fa-plus"></i> New Task</h4>
                                     </div>
                                     <div class="panel-body">
-                                        <form role="form">
+                                        <form action="add_task.php" method="POST" role="form">
                                             <div class="form-group">
                                                 <label class="control-label">Task Name</label>
-                                                <input type="text" class="form-control" value="Some text value...">
+                                                <input type="text" class="form-control" name="task_name" required placeholder="Enter task name">
+
                                             </div>
                                             <div class="form-group">
                                                 <label class="control-label">Description</label>
-                                                <textarea class="form-control" rows="5"></textarea>
+                                                <textarea class="form-control" rows="5" name="description" required placeholder="Task description"></textarea>
                                             </div>
                                             <div class="col-md-6">
                                                 <div class="row">
                                                     <label class="col-md-4">Due Date</label>
                                                     <div class="input-group col-md-8">
-                                                        <input type="text" class="form-control date-input" placeholder="mm/dd/yyyy" id="datepicker">
+                                                        <input type="text" class="form-control date-input" name="due_date" placeholder="mm/dd/yyyy" id="datepicker" required>
                                                         <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                                     </div>
                                                 </div>
